Form height and Navbar icon stretch bug fix for View Desktop Site in mobile devices

--- a/src/_App.scss
+++ b/src/_App.scss
@@ -93,14 +93,14 @@ body {
 	background-size: 10px 7px;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 909px) {
 	.common-wrapper {
 		max-width: 65%;
 		margin-left: 21.5%;
 	}
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 908px) {
 	.common-wrapper {
 		max-width: 100vw;
 		padding: 6rem 0.8rem;
